Crash when starting BI rendered view #36936

Closed
opened 2013-10-03 17:51:42 +02:00 by Shinsuke Irie · 14 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.04 amd64 + GeForce GTX 670
Windows 7 64bit + GeForce GT 650M

- Blender version with error, and version that worked ---

r60518, r60966 (own builds)
2.68a, 2.69 RC3 (official builds)

- Short description of error ---

Blender often crashes when using BI renderer and changing the 3D viewport to rendered mode (shift+Z).
It seems that changing the viewport from GLSL to Rendered after certain operation (e.g. undo) causes the crash.

Steps to reproduce:

  1. Start Blender
  2. Change the viewport to GLSL textured
  3. Move the default cube
  4. Undo previous step (ctrl+Z)
  5. Change the viewport to rendered view

You should be able to crash Blender while repeating the steps 2-5 several times.
The step 3 above can be another operation such as changing the resolution in render settings.

Attached a backtrace that includes debug symbols (blender_rendered_view_crash.txt).
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.04 amd64 + GeForce GTX 670 Windows 7 64bit + GeForce GT 650M - Blender version with error, and version that worked --- r60518, r60966 (own builds) 2.68a, 2.69 RC3 (official builds) - Short description of error --- Blender often crashes when using BI renderer and changing the 3D viewport to rendered mode (shift+Z). It seems that changing the viewport from GLSL to Rendered after certain operation (e.g. undo) causes the crash. Steps to reproduce: 1. Start Blender 2. Change the viewport to GLSL textured 3. Move the default cube 4. Undo previous step (ctrl+Z) 5. Change the viewport to rendered view You should be able to crash Blender while repeating the steps 2-5 several times. The step 3 above can be another operation such as changing the resolution in render settings. Attached a backtrace that includes debug symbols (blender_rendered_view_crash.txt). %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Brecht, can you check on this?
%%%

%%%Brecht, can you check on this? %%%

%%%I tried doing a bunch of things, but 3D view render seems to be stable here. The backtrace seems to indicate some material got corrupted, but I don't know why that would happen. There's not much I can do without more information.

  • Is this a new issue, or does it happen also in 2.68?
  • What are the actions before it crashes? When editing or removing materials or objects? Or immediately when enabling it?
  • Do you have a material or texture preview render open while starting the 3D view render?
  • Does this happen on the default cube, or is it only in some particular scenes?
    %%%
%%%I tried doing a bunch of things, but 3D view render seems to be stable here. The backtrace seems to indicate some material got corrupted, but I don't know why that would happen. There's not much I can do without more information. * Is this a new issue, or does it happen also in 2.68? * What are the actions before it crashes? When editing or removing materials or objects? Or immediately when enabling it? * Do you have a material or texture preview render open while starting the 3D view render? * Does this happen on the default cube, or is it only in some particular scenes? %%%
Author
Member

%%%* I confirmed the same crash happens also in 2.68a. See blender.crash.txt.

  • It happens immediately after typing shift+Z.
  • I had the material preview, but I'm not sure if the crash can happen without the preview.
  • I didn't experience the crash on the default cube scene yet, but it happened on very simple scene (e.g. icosphere + monkey).
    %%%
%%%* I confirmed the same crash happens also in 2.68a. See blender.crash.txt. * It happens immediately after typing shift+Z. * I had the material preview, but I'm not sure if the crash can happen without the preview. * I didn't experience the crash on the default cube scene yet, but it happened on very simple scene (e.g. icosphere + monkey). %%%

%%%Ok, it seems like I am going to need a .blend file and some steps to redo the problem, because I can't get it to crash. I spent a lot of time debugging this stuff for 2.68 and found no remaining crashes. So if it also happens in that version, it must be some particular setup or combination of steps that I can't guess well.%%%

%%%Ok, it seems like I am going to need a .blend file and some steps to redo the problem, because I can't get it to crash. I spent a lot of time debugging this stuff for 2.68 and found no remaining crashes. So if it also happens in that version, it must be some particular setup or combination of steps that I can't guess well.%%%
Author
Member

%%%The similar crash happened:

backtrace

/usr/lib/blender/blender() [0xbac4e0]
/lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f80e8db3ff0]
/usr/lib/blender/blender(end_render_material+0x1a) [0x118c22a]
/usr/lib/blender/blender(end_render_materials+0x27) [0x118c277]
/usr/lib/blender/blender(RE_Database_Free+0xfc) [0xe94bbc]
/usr/lib/blender/blender() [0xe0c93c]
/usr/lib/blender/blender() [0xbb9faa]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x7f6e) [0x7f80ee666f6e]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f80e8e779cd]

However I still cannot find how to reproduce it. It unexpectedly happens every time...

r60982%%%

%%%The similar crash happened: # backtrace /usr/lib/blender/blender() [0xbac4e0] /lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f80e8db3ff0] /usr/lib/blender/blender(end_render_material+0x1a) [0x118c22a] /usr/lib/blender/blender(end_render_materials+0x27) [0x118c277] /usr/lib/blender/blender(RE_Database_Free+0xfc) [0xe94bbc] /usr/lib/blender/blender() [0xe0c93c] /usr/lib/blender/blender() [0xbb9faa] /lib/x86_64-linux-gnu/libpthread.so.0(+0x7f6e) [0x7f80ee666f6e] /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f80e8e779cd] However I still cannot find how to reproduce it. It unexpectedly happens every time... r60982%%%
Author
Member

%%%One more similar case:

backtrace

./blender() [0xf84687]
./blender() [0xf848c5]
/lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f7d03deeff0]
./blender(end_render_textures+0x28) [0x12d3fa8]
./blender(RE_Database_Free+0xf5) [0x12f0385]
./blender() [0x10df872]
./blender() [0xf911ca]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x7f6e) [0x7f7d0478ff6e]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f7d03eb29cd]

This happened when I was using 2.69 RC3.

The crash happens again and again, about 5-20 times per day.
%%%

%%%One more similar case: # backtrace ./blender() [0xf84687] ./blender() [0xf848c5] /lib/x86_64-linux-gnu/libc.so.6(+0x36ff0) [0x7f7d03deeff0] ./blender(end_render_textures+0x28) [0x12d3fa8] ./blender(RE_Database_Free+0xf5) [0x12f0385] ./blender() [0x10df872] ./blender() [0xf911ca] /lib/x86_64-linux-gnu/libpthread.so.0(+0x7f6e) [0x7f7d0478ff6e] /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f7d03eb29cd] This happened when I was using 2.69 RC3. The crash happens again and again, about 5-20 times per day. %%%
Author
Member

%%%I found the steps to reproduce the crash:

  1. Start Blender
  2. Change the viewport to GLSL textured
  3. Move the default cube
  4. Undo previous step (ctrl+Z)
  5. Change the viewport to rendered view

You should be able to crash Blender while repeating the steps 2-5 several times.

Note: The crash can happen even if the window has no material preview.
%%%

%%%I found the steps to reproduce the crash: 1. Start Blender 2. Change the viewport to GLSL textured 3. Move the default cube 4. Undo previous step (ctrl+Z) 5. Change the viewport to rendered view You should be able to crash Blender while repeating the steps 2-5 several times. Note: The crash can happen even if the window has no material preview. %%%
Author
Member

%%%Additional info,

You can substitute another operation for the step 3 above. e.g. Change the resolution in render settings.%%%

%%%Additional info, You can substitute another operation for the step 3 above. e.g. Change the resolution in render settings.%%%
Author
Member

%%%Confirmed the crash happens also on Windows 7, using 2.69 RC3.

Also updated the initial description.%%%

%%%Confirmed the crash happens also on Windows 7, using 2.69 RC3. Also updated the initial description.%%%
Author
Member

%%%The undo in the step 4 seems not essential. Changing viewport after some other operation sometimes causes the crash, too.

Update the initial description again...%%%

%%%The undo in the step 4 seems not essential. Changing viewport after some other operation sometimes causes the crash, too. Update the initial description again...%%%
Author
Member

I confirmed GLSL view is not essential. Switching the viewport from "Solid" to "Rendered" also can cause the crash.

Undo seems to corrupt something.

I confirmed GLSL view is not essential. Switching the viewport from "Solid" to "Rendered" also can cause the crash. Undo seems to corrupt something.
Brecht Van Lommel was unassigned by Shinsuke Irie 2013-11-18 07:56:43 +01:00
Shinsuke Irie self-assigned this 2013-11-18 07:56:43 +01:00
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Fixed in git 69cbf3d.

Thanks, Brecht!

Fixed in git 69cbf3d. Thanks, Brecht!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36936
No description provided.