Fix for T36936: Crash when starting BI rendered view

Discard the render database when stopping the rendered preview,
otherwise starting it again may cause a segmentation fault because
undo/redo with non-rendered preview corrupts the database.