source/blender/editors/space_view3d/space_view3d.c
@@ -62,6 +62,7 @@
 #include "WM_types.h"
 
 #include "RE_engine.h"
+#include "RE_pipeline.h"
 
 #include "RNA_access.h"
 
@@ -271,6 +272,8 @@ void ED_view3d_shade_update(Main *bmain, View3D *v3d, ScrArea *sa)
 
 			if (rv3d && rv3d->render_engine) {
 				WM_jobs_kill_type(wm, ar, WM_JOB_TYPE_RENDER_PREVIEW);
+				if (rv3d->render_engine->re)
+					RE_Database_Free(rv3d->render_engine->re);
 				RE_engine_free(rv3d->render_engine);
 				rv3d->render_engine = NULL;
 			}
